delivery section added

--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
 
     <!-- main section -->
     <main>
-      <!-- Hero section -->
+      <!-- Hero section start-->
       <section class="primaryBGColor">
         <div class="maxW relative">
           <div class="absolute -top-8 left-0 -z-10">
@@ -131,7 +131,8 @@
           </div>
           <div class="py-28 flex justify-between items-center">
             <div class="w-1/2">
-              <h1 class="text-6xl font-bold text-primary leading-tight z-10 mt-10">
+              <h1
+                class="text-6xl font-bold text-primary leading-tight z-10 mt-10">
                 Order food online from your favourite local restaurants<span
                   class="text-secondary"
                   >.</span
@@ -188,6 +189,36 @@
           </div>
         </div>
       </section>
+      <!-- Hero section end -->
+
+      <!-- delivery section start -->
+      <section>
+        <div class="maxW py-24 flex items-center">
+          <div class="w-1/2">
+            <h4 class="text-[50px] text-primary font-bold">
+              Explore your <br />favourite city’s food.
+            </h4>
+            <p class="py-3 text-accent fntPoppins text-lg mr-5">
+              Lorem ipsum dolor sit amet consectetur. Ornare massa nunc nibh
+              tristique. Non ligula tristique ut ut libero sit convallis
+              maecenas. At egestas auctor porta mattis.
+            </p>
+            <button
+              class="btn btn-primary gap-2 normal-case rounded-full px-[50px] py-4 flex-nowrap">
+              Explore
+              <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="w-1/2 imgBG relative overflow-hidden">
+            <img
+              src="../assets/manoncycle.png"
+              class="absolute"
+              id="manAnimation"
+              alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- delivery section end -->
     </main>
   </body>
 </html>
