image responsive done

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <body class="">
     <header
       class="primaryBGColor border border-accent-content sticky top-0 backdrop-blur-md z-50">
-      <nav class="navbar maxW py-3">
+      <nav class="navbar maxW lg:py-2">
         <div class="navbar-start">
           <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -42,7 +42,7 @@
             </label>
             <ul
               tabindex="0"
-              class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
+              class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52 fntPoppins">
               <li><a href="#">Home</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">About us</a></li>
@@ -73,7 +73,7 @@
         </div>
         <div class="navbar-center hidden lg:flex">
           <!-- Large screen menu -->
-          <ul class="menu menu-horizontal px-1">
+          <ul class="menu menu-horizontal px-1 fntPoppins">
             <li><a href="#">Home</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">About us</a></li>
@@ -123,16 +123,16 @@
       <!-- Hero section start-->
       <section class="primaryBGColor">
         <div class="maxW relative">
-          <div class="absolute -top-8 left-0 -z-10">
+          <div class="absolute -top-8 left-0 -z-10 hidden lg:block">
             <img
               src="../assets/—Pngtree—hand-painted noise green leaf element_4054582 1-1.png"
               class="max-w-[200px]"
               alt="" />
           </div>
-          <div class="py-28 flex justify-between items-center">
-            <div class="w-1/2">
+          <div class="lg:py-28 py-16 flex lg:flex-row flex-col-reverse lg:justify-between lg:items-center">
+            <div class="lg:w-1/2 w-full">
               <h1
-                class="text-6xl font-bold text-primary leading-tight z-10 mt-10">
+                class="lg:text-6xl text-3xl lg:text-left text-center font-bold text-primary leading-tight z-10 mt-10">
                 Order food online from your favourite local restaurants<span
                   class="text-secondary"
                   >.</span
@@ -157,15 +157,21 @@
                 </div>
               </div>
             </div>
-            <div class="w-1/2">
-              <div class="relative ml-10">
-                <div class="absolute -top-6 -left-24 -z-10">
+            <div class="lg:w-1/2 w-full">
+              <div class="relative lg:ml-10 max-w-xl mx-auto">
+                <div class="absolute sm:-top-14 md:-top-12 -bottom-10 -left-4 lg:-left-14 md:-left-12 -z-10">
                   <img
                     src="../assets/NicePng_plate-of-food-png_546030 1.png"
-                    class="max-w-[200px]"
+                    class="max-w-[200px] w-40 md:w-full sm:w-44"
                     alt="" />
                 </div>
-                <div class="absolute -top-16 left-1/4">
+                <div class="absolute -top-16 md:right-5 -right-0 -z-10 ">
+                  <img
+                    src="../assets/—Pngtree—hand-painted noise green leaf element_4054582 1.png"
+                    class="max-w-[228px] w-40 md:w-full sm:w-48"
+                    alt="" />
+                </div>
+                <div class="absolute -top-16 left-1/4 hidden">
                   <div
                     class="bg-[linear-gradient(180deg,#FFFFFF,0%,rgba(255,255,255,0.4)100%)] px-8 py-3 rounded-lg backdrop-blur-sm border fntPoppins">
                     <h3 class="text-[40px] font-bold text-secondary">
@@ -177,13 +183,8 @@
                     </p>
                   </div>
                 </div>
-                <div class="absolute -top-16 right-14 -z-10">
-                  <img
-                    src="../assets/—Pngtree—hand-painted noise green leaf element_4054582 1.png"
-                    class="max-w-[228px]"
-                    alt="" />
-                </div>
-                <img src="../assets/image 1.png" class="max-w-lg z-50" alt="" />
+               
+                <img src="../assets/image 1.png" class="max-w-lg w-full z-50 mx-auto" alt="" />
               </div>
             </div>
           </div>
@@ -192,7 +193,7 @@
       <!-- Hero section end -->
 
       <!-- delivery section start -->
-      <section>
+      <section class="hidden">
         <div class="maxW py-24 flex items-center">
           <div class="w-1/2">
             <h4 class="text-[50px] text-primary font-bold">
