Hero section responsie done

--- a/src/index.html
+++ b/src/index.html
@@ -129,8 +129,8 @@
               class="max-w-[200px]"
               alt="" />
           </div>
-          <div class="lg:py-28 py-16 flex lg:flex-row flex-col-reverse lg:justify-between lg:items-center">
-            <div class="lg:w-1/2 w-full">
+          <div class="lg:py-28 py-16 flex lg:flex-row flex-col-reverse lg:justify-between lg:items-center gap-y-5">
+            <div class="lg:w-1/2 w-full max-w-2xl mx-auto">
               <h1
                 class="lg:text-6xl text-3xl lg:text-left text-center font-bold text-primary leading-tight z-10 mt-10">
                 Order food online from your favourite local restaurants<span
@@ -138,19 +138,19 @@
                   >.</span
                 >
               </h1>
-              <p class="text-neutral text-2xl font-semibold my-7 fntPoppins">
+              <p class="text-neutral lg:text-2xl md:text-xl text-lg font-semibold my-7 fntPoppins text-center lg:text-left">
                 Freshly made food delivered to your door.
               </p>
-              <div class="">
+              <div class="lg:max-w-xl max-w-lg lg:mx-0 mx-auto">
                 <div
                   class="border-l border-t border-b border-2 border-[rgba(57,108,3,0.3)] rounded-full flex items-center">
-                  <i class="fa-solid fa-circle text-5xl text-secondary m-2"></i>
+                  <i class="fa-solid fa-circle md:text-5xl sm:text-3xl text-lg text-secondary lg:m-2 m-1"></i>
                   <input
                     type="text"
                     placeholder="Enter your location"
-                    class="input w-full bg-transparent outline-none focus:outline-none fntPoppins text-[22px]" />
+                    class="input w-full bg-transparent outline-none focus:outline-none fntPoppins md:text-[22px]  sm:px-4 p-0 border-none" />
                   <button
-                    class="btn btn-primary gap-2 normal-case rounded-full px-[50px] py-8 flex-nowrap ml-2">
+                    class="btn btn-primary lg:gap-2 gap-1 normal-case rounded-full md:px-[50px] px-5 md:py-8 py-3 flex-nowrap ml-2">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     Search
                   </button>
@@ -171,14 +171,14 @@
                     class="max-w-[228px] w-40 md:w-full sm:w-48"
                     alt="" />
                 </div>
-                <div class="absolute -top-16 left-1/4 hidden">
+                <div class="absolute -top-10 sm:-top-12 sm:left-16  sm:translate-x-1/2	mx-auto">
                   <div
                     class="bg-[linear-gradient(180deg,#FFFFFF,0%,rgba(255,255,255,0.4)100%)] px-8 py-3 rounded-lg backdrop-blur-sm border fntPoppins">
-                    <h3 class="text-[40px] font-bold text-secondary">
+                    <h3 class="lg:text-4xl text-2xl font-bold text-secondary">
                       <i class="fa-solid fa-check-to-slot"></i> 200k+
                     </h3>
                     <p
-                      class="text-xl font-semibold text-center text-[#838383] mt-1">
+                      class="lg:text-lg text-sm  font-semibold text-center text-[#838383] mt-1">
                       People Delivered
                     </p>
                   </div>
